--- a/tailwinds.init.css
+++ b/tailwinds.init.css
@@ -33,9 +33,56 @@
 .btn{
   background: linear-gradient(90deg, #ff2fb3, #ff7b00);
 border: none;
-padding: 12px 16px;
+padding: 8px 30px;
+margin: 12px 16px;
 border-radius: 20px;
 color: azure;
 cursor: pointer;
 }
+/* about */
+.about-section{
+    min-height: 100vh;
+    background: linear-gradient(135deg,#14002b,#2b0040);
+    color: #ffffff;
+    text-align: center;
+    padding: 80px 20px;
+}
+.content h2{
+    font-size: 48px;
+    margin-bottom: 20px;
+}
+.content p {
+    font-size: 16px;
+    color:#ffffff ;
+    line-height: 1.9;
+    margin: 10px auto;
+    max-width: 700px;
+    margin-bottom: 80px;
 
+}
+hr{
+    width: 100%;
+    border: 0;
+    border-bottom: 1px solid #ffffff;
+}
+.stats{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 80px;
+    margin-left: 200px;
+    margin-right: 200px;
+    margin-top: 80px;
+}
+.box h3{
+    color:#00ff88;
+    font-weight: bolder;
+    font-size: 48px;
+    margin-bottom:16px ;
+}
+.box span{
+    font-size: 16px;
+    letter-spacing: 1px;
+    color: #ffffff;
+}
+@import "tailwindcss"
