--- a/tailwinds.init.css
+++ b/tailwinds.init.css
@@ -68,11 +68,14 @@ hr{
 .stats{
     display: flex;
     justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 80px;
+    max-width: 1100px;
     margin-left: 200px;
     margin-right: 200px;
     margin-top: 80px;
+
 }
 .box h3{
     color:#00ff88;
@@ -85,11 +88,62 @@ hr{
     letter-spacing: 1px;
     color: #ffffff;
 }
+/* Why Choose Section */
+.why-section{
+    background: linear-gradient(180deg, #14002b, #2b0040);
+padding: 80px 20px;
+color: #ffffff;
+}
+.why-section h2{
+    text-align: center;
+    font-size: 48px;
+    margin-bottom: 80px;
+}
+.why-grid{
+    max-width: 1200px;
+    margin: auto;
+    display: grid;
+      grid-template-columns: 1.2fr 1fr 1fr;
+      grid-template-rows: repeat(2 auto);
+      gap:24px;
+
+}
+.why-card{
+  background: #2a0a52;
+  padding: 24px;
+  border-radius: 18px;
+
+}
+.why-card.big{
+    grid-row: 1 / span 2;
+}
+.icon{
+    margin-bottom: 12PX;
+}
+.why-card h3{
+      font-size: 20px;
+  margin-bottom: 10px;
+
+}
+why-card p{
+  font-size: 14px;
+  color: #d0d0d0;
+  line-height: 1.6;
+}
+
+
+
+
+
+
+
+
+
 /* Featured Episodes */
 .episodes{
           background: linear-gradient(180deg, #0f0029, #1a003d);
           color: white;
-                padding: 40px;
+                padding: 60px 20px;
                 margin: 0 auto;
 }
 .episodes h2{
@@ -111,11 +165,21 @@ hr{
 .card:hover{
     transform: translateY(-6px);
 }
+.video{
+    position: relative;
+    padding-top: 56%;
+    overflow: hidden;
+    border-radius: 12px;
+}
 .video iframe {
     width: 100%;
     height: 100%;
     border-radius: 12px;
-    border: none;
+    border:none;
+position: absolute;
+top: 0;
+left: 0;
+
 }
 .card h3{
     margin:  12px 0 6px;
@@ -180,4 +244,51 @@ hr{
   justify-content: center;
 
 }
+/* footer */
+.footer{
+background-image: url(assets/footer-bg.png);
+background-size: cover;
+background-position: center;
+position: relative;
+width: 100%;
+height: 300PX;
+}
+.footer-overlay{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+        width: 100%;
+    height: 100%;
+
+}
+.img{
+    display: flex;
+    gap:40px;
+    max-width: 560px;
+    height: 24px;
+    margin-bottom: 32px;
+    margin-top: 32px;
+}
+
+.logo{
+    font-size: 48px;
+    margin-bottom: 14px;
+}
+.logo span{
+        color:#FB09B4;
+
+}
+.platforms{
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 15px;
+
+}
+
 @import "tailwindcss"
+
