--- a/tailwinds.init.css
+++ b/tailwinds.init.css
@@ -1,71 +1,220 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 /* naver */
 
-.navbar{
-      background: linear-gradient(90deg, #0f0029, #22004d);
-  height: 80px;
+.navbar {
+    background: linear-gradient(90deg, #0f0029, #22004d);
+    height: 80px;
 
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 60px;
-  color: aliceblue;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 60px;
+    color: aliceblue;
 
 }
-.logo{
+
+.logo {
     font-size: 28px;
     font-weight: bold;
 }
-.logo span{
-    color:#FB09B4;
+
+.logo span {
+    color: #FB09B4;
 }
-.menu{
+
+.menu {
     list-style: none;
     display: flex;
     gap: 30px;
     color: #d0d0d0;
     font-size: 16px;
 }
-.btn{
-  background: linear-gradient(90deg, #ff2fb3, #ff7b00);
-border: none;
-padding: 8px 30px;
-margin: 12px 16px;
-border-radius: 20px;
-color: azure;
-cursor: pointer;
+
+.btn {
+    background: linear-gradient(90deg, #ff2fb3, #ff7b00);
+    border: none;
+    padding: 8px 30px;
+    margin: 12px 16px;
+    border-radius: 20px;
+    color: azure;
+    cursor: pointer;
 }
+
+/* banner */
+
+.banner {
+    width: 100%;
+    height: 100vh;
+    background: url(./assets/hero-bg.png);
+    justify-content: center;
+    align-items: center;
+    background-size: cover;
+    display: flex;
+    position: relative;
+    text-align: center;
+    overflow: hidden;
+
+}
+
+.wava {
+    position: absolute;
+    width: 350px;
+    height: 350px;
+    background: url(./assets/hero-circle.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+
+}
+
+.container {
+    position: relative;
+    z-index: 10;
+}
+
+
+.circle-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
+}
+
+.main-circle {
+
+    width: 200PX;
+    height: 200PX;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
+.main-circle IMG {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 476px;
+}
+
+.badge {
+    position: absolute;
+    top: -40px;
+    right: -20px;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 8px 12px;
+    border-radius: 20px;
+    box-shadow: 0 0 15px #00ffa3;
+    background: #00ffa3;
+    margin-top: 227px;
+    cursor: pointer;
+
+
+}
+
+.text-content {
+    margin-top: 335px;
+}
+
+.text-content h1 {
+    font-size: 48px;
+    font-weight: 800;
+    margin-bottom: 12px;
+    letter-spacing: -1px;
+    color: #d0d0d0;
+
+}
+
+.text-content p {
+    font-size: 16px;
+    color: #b3b3b3;
+    max-width: 600px;
+    margin: 0 auto 30px;
+
+}
+
+.btn-group {
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+}
+
+.btn {
+    padding: 8px 18px;
+    border-radius: 50px;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    transition: 0.3s ease;
+}
+
+.btn-spotify {
+    background: linear-gradient(to right, #ffde59, #ff3131, #cb6ce6);
+    color: white;
+}
+
+.btn-subscribe {
+    border: 1.5px solid #00ffa3;
+    color: #00ffa3;
+    background: rgba(0, 255, 163, 0.05);
+}
+
+.btn:hover {
+    transform: scale(1.05);
+}
+
+.left-wave {
+    left: 0;
+    top: 30%;
+    transform: rotate(0deg);
+}
+
+.right-wave {
+    right: 0;
+    top: 30%;
+    transform: scaleX(-1);
+}
+
+
 /* about */
-.about-section{
+.about-section {
     min-height: 100vh;
-    background: linear-gradient(135deg,#14002b,#2b0040);
+    background: linear-gradient(135deg, #14002b, #2b0040);
     color: #ffffff;
     text-align: center;
     padding: 80px 20px;
 }
-.content h2{
+
+.about h2 {
     font-size: 48px;
     margin-bottom: 20px;
 }
-.content p {
+
+.about p {
     font-size: 16px;
-    color:#ffffff ;
+    color: #ffffff;
     line-height: 1.9;
     margin: 10px auto;
     max-width: 700px;
     margin-bottom: 80px;
 
 }
-hr{
+
+hr {
     width: 100%;
     border: 0;
     border-bottom: 1px solid #ffffff;
 }
-.stats{
+
+.stats {
     display: flex;
     justify-content: space-between;
     justify-content: center;
@@ -77,142 +226,157 @@ hr{
     margin-top: 80px;
 
 }
-.box h3{
-    color:#00ff88;
+
+.box h3 {
+    color: #00ff88;
     font-weight: bolder;
     font-size: 48px;
-    margin-bottom:16px ;
+    margin-bottom: 16px;
 }
-.box span{
+
+.box span {
     font-size: 16px;
     letter-spacing: 1px;
     color: #ffffff;
 }
+
 /* Why Choose Section */
-.why-section{
+.why-section {
     background: linear-gradient(180deg, #14002b, #2b0040);
-padding: 80px 20px;
-color: #ffffff;
+    padding: 80px 20px;
+    color: #ffffff;
 }
-.why-section h2{
+
+.why-section h2 {
     text-align: center;
     font-size: 48px;
     margin-bottom: 80px;
 }
-.why-grid{
+
+.why-grid {
     max-width: 1200px;
     margin: auto;
     display: grid;
-      grid-template-columns: 1.2fr 1fr 1fr;
-      grid-template-rows: repeat(2 auto);
-      gap:24px;
+    grid-template-columns: 1.2fr 1fr 1fr;
+    grid-template-rows: repeat(2 auto);
+    gap: 24px;
 
 }
-.why-card{
-  background: #2a0a52;
-  padding: 24px;
-  border-radius: 18px;
+
+.why-card {
+    background: #2a0a52;
+    padding: 24px;
+    border-radius: 18px;
 
 }
-.why-card.big{
+
+.why-card.big {
     grid-row: 1 / span 2;
 }
-.icon{
+
+.icon {
     margin-bottom: 12PX;
 }
-.why-card h3{
-      font-size: 20px;
-  margin-bottom: 10px;
+
+.why-card h3 {
+    font-size: 20px;
+    margin-bottom: 10px;
 
 }
-why-card p{
-  font-size: 14px;
-  color: #d0d0d0;
-  line-height: 1.6;
+
+why-card p {
+    font-size: 14px;
+    color: #d0d0d0;
+    line-height: 1.6;
 }
-
-
-
-
-
-
-
 
 
 /* Featured Episodes */
-.episodes{
-          background: linear-gradient(180deg, #0f0029, #1a003d);
-          color: white;
-                padding: 60px 20px;
-                margin: 0 auto;
+.episodes {
+    background: linear-gradient(180deg, #0f0029, #1a003d);
+    color: white;
+    padding: 60px 20px;
+    margin: 0 auto;
 }
-.episodes h2{
+
+.episodes h2 {
     text-align: center;
     margin-bottom: 30px;
-    font-size:48px ;
+    font-size: 48px;
 }
-.episodes-card{
-    display:grid;
-    grid-template-columns: repeat(3,1fr);
+
+.episodes-card {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     gap: 25px;
 }
-.card{
+
+.card {
     background: #2a0a52;
     padding: 16px;
     border-radius: 16px;
     transition: transform 0.3s ease;
 }
-.card:hover{
+
+.card:hover {
     transform: translateY(-6px);
 }
-.video{
+
+.video {
     position: relative;
     padding-top: 56%;
     overflow: hidden;
     border-radius: 12px;
 }
+
 .video iframe {
     width: 100%;
     height: 100%;
     border-radius: 12px;
-    border:none;
-position: absolute;
-top: 0;
-left: 0;
+    border: none;
+    position: absolute;
+    top: 0;
+    left: 0;
 
 }
-.card h3{
-    margin:  12px 0 6px;
+
+.card h3 {
+    margin: 12px 0 6px;
     text-align: center;
     font-size: 28px;
     color: #ffffff;
 }
-.card p{
-     text-align: center;
+
+.card p {
+    text-align: center;
     font-size: 16px;
-    color:#ffffff;
+    color: #ffffff;
     margin-bottom: 8px;
 }
-.time{
+
+.time {
     font-size: 10px;
     color: #00ff88;
     font-weight: 500;
-   
+
 }
+
 /* meet host */
-.host-section{
+.host-section {
     max-width: 1600px;
-    margin-top:120px;
+    margin-top: 120px;
 }
-.host-card{
-    background:#2a0a52;
-    border-radius:18px ;
+
+.host-card {
+    background: #2a0a52;
+    border-radius: 18px;
     padding: 18px;
     display: flex;
     gap: 30px;
     align-items: center;
 }
-.host-img img{
+
+.host-img img {
     width: 300px;
     height: 200px;
     border-radius: 50%;
@@ -220,68 +384,77 @@ left: 0;
     border: 4px solid rosybrown;
     margin-top: 40px;
 }
-.host-content p{
-  font-size: 15px;
-  color: #d0d0d0;
-  line-height: 1.6;
-  margin-bottom: 12px;
+
+.host-content p {
+    font-size: 15px;
+    color: #d0d0d0;
+    line-height: 1.6;
+    margin-bottom: 12px;
 }
-.host-content h3{
+
+.host-content h3 {
     font-size: 48px;
     margin-top: 40px;
 }
+
 .socials {
     display: flex;
     gap: 12px;
 }
-.socials img{
-    
-  border-radius: 90px;
-  display: flex;
-  gap: 20px;
-  border: 2px solid rosybrown;
-  align-items: center;
-  justify-content: center;
+
+.socials img {
+
+    border-radius: 90px;
+    display: flex;
+    gap: 20px;
+    border: 2px solid rosybrown;
+    align-items: center;
+    justify-content: center;
 
 }
+
 /* footer */
-.footer{
-background-image: url(assets/footer-bg.png);
-background-size: cover;
-background-position: center;
-position: relative;
-width: 100%;
-height: 300PX;
+.footer {
+    background-image: url(assets/footer-bg.png);
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    width: 100%;
+    height: 300PX;
 }
-.footer-overlay{
+
+.footer-overlay {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     text-align: center;
     color: white;
-        width: 100%;
+    width: 100%;
     height: 100%;
 
 }
-.img{
+
+.img {
     display: flex;
-    gap:40px;
+    gap: 40px;
     max-width: 560px;
     height: 24px;
     margin-bottom: 32px;
     margin-top: 32px;
 }
 
-.logo{
+.logo {
     font-size: 48px;
     margin-bottom: 14px;
 }
-.logo span{
-        color:#FB09B4;
+
+.logo span {
+    color: #FB09B4;
 
 }
-.platforms{
+
+.platforms {
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
@@ -291,4 +464,3 @@ height: 300PX;
 }
 
 @import "tailwindcss"
-
